<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">" calculadoraBasica"</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Saludos Este es un mensaje hecho para hacer una calculadora basica</string>
	<string name="textBotonSumar">"+"</string>
	<string name="textBotonRestar">"-"</string>
	<string name="textBotonMultiplicar">"x"</string>
	<string name="textBotonDividir">"/"</string>
	
</resources>