<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalculadoraBasica" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/Btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="7" />

    <Button
        android:id="@+id/Btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/Btn6"
        android:text="1" />

    <Button
        android:id="@+id/Btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Btn7"
        android:layout_alignBottom="@+id/Btn7"
        android:layout_toRightOf="@+id/Btn7"
        android:text="8" />

    <Button
        android:id="@+id/Btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Btn8"
        android:layout_alignBottom="@+id/Btn8"
        android:layout_toRightOf="@+id/Btn8"
        android:text="9" />

    <Button
        android:id="@+id/Btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Btn7"
        android:layout_toLeftOf="@+id/Btn8"
        android:text="4" />

    <Button
        android:id="@+id/Btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Btn4"
        android:layout_alignBottom="@+id/Btn4"
        android:layout_toLeftOf="@+id/Btn9"
        android:text="5" />

    <Button
        android:id="@+id/Btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Btn5"
        android:layout_alignBottom="@+id/Btn5"
        android:layout_alignLeft="@+id/Btn9"
        android:text="6" />

    <Button
        android:id="@+id/Btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Btn1"
        android:layout_alignBottom="@+id/Btn1"
        android:layout_toLeftOf="@+id/Btn6"
        android:text="2" />

    <Button
        android:id="@+id/Btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Btn2"
        android:layout_alignBottom="@+id/Btn2"
        android:layout_alignLeft="@+id/Btn6"
        android:text="3" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Btn6"
        android:layout_alignRight="@+id/textView2"
        android:layout_toRightOf="@+id/Btn9"
        android:text="@string/textBotonSumar" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Btn3"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:text="@string/textBotonRestar" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Btn3"
        android:layout_alignBottom="@+id/Btn3"
        android:layout_alignLeft="@+id/Button01"
        android:layout_alignRight="@+id/Button01"
        android:text="@string/textBotonMultiplicar" />

    <Button
        android:id="@+id/Button03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button02"
        android:layout_alignRight="@+id/Button02"
        android:layout_below="@+id/Button02"
        android:text="@string/textBotonDividir" />

    <Button
        android:id="@+id/Button04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Btn1"
        android:layout_alignRight="@+id/Btn3"
        android:layout_alignTop="@+id/Button03"
        android:text="=" />

</RelativeLayout>